<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingTop="5dip"
        android:paddingRight="10dip"
        android:paddingBottom="5dip"
        android:id="@+id/LLinfowindow">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="山隆高雄站01(超級換電站)"
                android:textSize="@dimen/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stationAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="高雄市小港區沿海三路26-3號"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/stationLatLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="（22.531112, 120.370979）"
                android:textSize="@dimen/text" />

            <View
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/nowAttr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="現在狀況："
                android:textSize="@dimen/text" />

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/attrText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="連線異常"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/attr1"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/OK"
                    android:textColor="@color/OK"
                    android:textSize="@dimen/text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/attrText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="數位電錶異常"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/attr2"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/OK"
                    android:textColor="@color/OK"
                    android:textSize="@dimen/text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/attrText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="某槽位上鎖失敗"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/attr3"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:text="@string/NG"
                    android:textColor="@color/NG"
                    android:textSize="@dimen/text" />
            </LinearLayout>

            <View
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/memoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="備註："
                    android:textSize="@dimen/text" />

                <Spinner
                    android:id="@+id/memoAttr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/memo"
                    android:gravity="right" />
            </LinearLayout>

            <View
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@drawable/div" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="現在位置："
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/nowAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="高雄市小港區沿海三路26-2號"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/nowLatLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="（22.531112, 120.370979）"
                android:textSize="@dimen/text" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:text="@string/cancel"
                android:textSize="@dimen/button" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="right"
                android:layout_marginEnd="2dp"
                android:text="@string/confirm"
                android:textSize="@dimen/button" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>